--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Carhire retrieve booking widget created with reactJS tobe used within multiple cms pages of vroomvroomvroom",
   "main": "index.js",
   "scripts": {
+    "compile": "webpack",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vincent Rafols <vincent.rafols@gmail.com>",
@@ -14,6 +16,10 @@
     "babel-loader": "^7.1.2",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.6.0"
+    "express": "^4.15.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0"
   }
 }
