--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "compile": "webpack",
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -d && webpack-dev-server --content-base build/ --inline --hot --port 3000"
   },
   "author": "Vincent Rafols <vincent.rafols@gmail.com>",
   "license": "ISC",
@@ -16,15 +17,24 @@
     "babel-loader": "^7.1.2",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
+    "css-loader": "^0.28.7",
     "eslint": "^4.7.2",
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.15.4",
+    "node-sass": "^4.5.3",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "stylelint": "^8.1.1",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-scss": "^2.1.0",
     "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0"
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.8.2"
   }
 }
