--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint": "^4.7.2",
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.15.4",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
