--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "keywords": [],
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-latest": "^6.24.1",
@@ -20,12 +21,16 @@
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.7",
+    "encoding": "^0.1.12",
     "eslint": "^4.7.2",
     "eslint-plugin-react": "^7.4.0",
-    "express": "^4.15.4",
+    "express": "^4.15.5",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "node-fetch-json": "0.0.3",
     "node-sass": "^4.5.3",
+    "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
